# Vulgine

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
cmake/: compileShaders.cmake
include/: IVulgine.h  IVulgineObjects.h  IVulgineScene.h  Vulgine.h  library.h
source/: CMakeLists.txt  Utilities.cpp  Utilities.h  Vulgine.cpp  Vulgine.h  VulgineDescriptorSet.cpp  VulgineDescriptorSet.h  VulgineFramebuffer.cpp  VulgineFramebuffer.h  VulgineImage.cpp  VulgineImage.h  VulgineObject.cpp  VulgineObject.h  VulgineObjects.cpp  VulgineObjects.h  VulginePipeline.cpp  VulginePipeline.h  VulgineRenderPass.cpp  VulgineRenderPass.h  VulgineScene.cpp  VulgineScene.h  VulgineUI.cpp  VulgineUI.h  library.cpp
source/shaders/: CMakeLists.txt  background.frag  background.vert  backgroundTextured.frag  color.frag  color.vert  composite.frag  default.frag  default.vert  g-buffer-default.frag  g-buffer-textured.frag
source/vulkan/: CMakeLists.txt  VmaImpl.cpp  VulkanAllocatable.cpp  VulkanAllocatable.h  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDescriptable.cpp  VulkanDescriptable.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImGui.cpp  VulkanImGui.h  VulkanInitializers.hpp  VulkanSampler.cpp  VulkanSampler.h  VulkanSwapChain.cpp  VulkanSwapChain.h
